--- a/light.css
+++ b/light.css
@@ -1,81 +1,91 @@
 @font-face {
-            font-family:font2;
-            src: url(digit.ttf)
-        }
-            body{
-    			padding:5%;
-    			margin: 1% auto;
-    			max-width:650px;
-    			background:#FAFAFA;
-			}
-			
-			p{
-                font-family:font2;
-			}
+	font-family:font2;
+	src: url(https://raw.thun888.xyz/thun888/asstes/master/files/Bili_Realtime_Data/digit.ttf)
+}
+	body{
+		padding:5%;
+		margin: 1% auto;
+		max-width:650px;
+		background:#FAFAFA;
+	}
+	
+	p{
+		font-family:font2;
+	}
 
-			.triCombo{
-			    color:#04B0FD;
-			    font-size:22px
-			}
-			
-			.realTimeFans{
-			    text-align:center;
-			    font-size:20px;
+	.triCombo{
+		color:#04B0FD;
+		font-size:22px
+	}
+	
+	.realTimeFans{
+		text-align:center;
+		font-size:20px;
 
-			}
-			
-			.realTimeFansNum{
-			    text-align:center;
-			    margin:-12px 1px 0px 1px;
-			    font-size:48px;
-			    color:#04B0FD;
-			}
-			
-			.incFans{
-			    
-			    margin:5px 1px 5px 1px;
-			    font-size:18px;
-			}
-			
-			.incFansNum{
-			    color:#00E676;
-			    font-size:30px;
-			}
-			
-			
-			.fansNum{
-			    /*border: 1px solid white; */
-                /*border-radius:14px;*/
-                background:#FAFAFA;
-                /*box-shadow:0px 0px 1px 1px #cccccc;*/
-			}
-			
-			.dataList{
-			    /*border: 1px solid white; */
-                /*border-radius:14px;*/
-                background:#FAFAFA;
-                /*box-shadow:0px 0px 1px 1px #cccccc;*/
-                padding:0% 4%;
-                margin: 1% 0 4% 0; 
-                
-			}
-			.play{
-			    color:#FF4684;
-			    font-size:30px;
-			}
-			.dataCaption{
-			    text-align:center;
-			    margin:-5px 0px 7px 0px;
-			    font-size: 14px;
-			}
-			.headHoriHot{
-			    vertical-align: middle;
-            	font-size: 10px; 
-            	font-weight: bold;
-            	background:red;
-            	margin: 0 4px 2px 4px;
-            	color: white;
-            	border-radius: 20px;
-            	padding: 3px 8px;
-            	
-            }
+	}
+	
+	.realTimeFansNum{
+		text-align:center;
+		margin:-12px 1px 0px 1px;
+		font-size:48px;
+		color:#04B0FD;
+	}
+	
+	.incFans{
+		
+		margin:5px 1px 5px 1px;
+		font-size:18px;
+	}
+	
+	.incFansNum{
+		color:#00E676;
+		font-size:30px;
+	}
+	
+	
+	.fansNum{
+		/*border: 1px solid white; */
+		/*border-radius:14px;*/
+		background:#FAFAFA;
+		/*box-shadow:0px 0px 1px 1px #cccccc;*/
+	}
+	
+	.dataList{
+		/*border: 1px solid white; */
+		/*border-radius:14px;*/
+		background:#FAFAFA;
+		/*box-shadow:0px 0px 1px 1px #cccccc;*/
+		padding:0% 4%;
+		margin: 1% 0 4% 0; 
+		
+	}
+	.play{
+		color:#FF4684;
+		font-size:30px;
+	}
+	.dataCaption{
+		text-align:center;
+		margin:-5px 0px 7px 0px;
+		font-size: 14px;
+	}
+	.headHoriHot{
+		vertical-align: middle;
+		font-size: 10px; 
+		font-weight: bold;
+		background:red;
+		margin: 0 4px 2px 4px;
+		color: white;
+		border-radius: 20px;
+		padding: 3px 8px;
+		
+	}
+	#next {
+		background-color: #ff4684; /* Green */
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		border-radius: 4px;
+	}
